2008-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/35350
	* gcc.target/i386/isa-1.c: Add -march=x86-64.
	* gcc.target/i386/isa-2.c: Likewise.
	* gcc.target/i386/isa-3.c: Likewise.
	* gcc.target/i386/isa-10.c: Likewise.
	* gcc.target/i386/isa-11.c: Likewise.
	* gcc.target/i386/isa-12.c: Likewise.
	* gcc.target/i386/isa-13.c: Likewise.
	* gcc.target/i386/isa-14.c: Likewise.

2008-03-07  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-03-05  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/35472
	* gcc.c-torture/execute/pr35472.c: New testcase.

2008-03-06  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/35189
	* gcc.target/i386/isa-1.c: New.
	* gcc.target/i386/isa-2.c: Likewise.
	* gcc.target/i386/isa-3.c: Likewise.
	* gcc.target/i386/isa-4.c: Likewise.
	* gcc.target/i386/isa-5.c: Likewise.
	* gcc.target/i386/isa-6.c: Likewise.
	* gcc.target/i386/isa-7.c: Likewise.
	* gcc.target/i386/isa-8.c: Likewise.
	* gcc.target/i386/isa-9.c: Likewise.
	* gcc.target/i386/isa-10.c: Likewise.
	* gcc.target/i386/isa-11.c: Likewise.
	* gcc.target/i386/isa-12.c: Likewise.
	* gcc.target/i386/isa-13.c: Likewise.
	* gcc.target/i386/isa-14.c: Likewise.

2008-03-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/35028
	* g++.dg/gomp/pr35028.C: New test.

	PR c++/34964
	PR c++/35244
	* gcc.dg/gomp/pr34964.c: New test.
	* g++.dg/gomp/pr34964.C: New test.
	* gcc.dg/gomp/pr35244.c: New test.
	* g++.dg/gomp/pr35244.C: New test.

	PR c++/35078
	* g++.dg/gomp/pr35078.C: New test.

2008-03-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* gcc.c-torture/execute/20080222-1.c: New test.

2008-03-06  Paolo Carlini  <pcarlini@suse.de>

	PR c++/35323
	* g++.dg/lookup/crash7.C: New.

2008-03-06  Paolo Carlini  <pcarlini@suse.de>

	PR c++/35333
	* g++.dg/other/error26.C: New.

2008-03-06  Paolo Carlini  <pcarlini@suse.de>
