@@ -1,3 +1,7 @@
+2008-03-09  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/frame_overflow.adb: Improve portability.
+
 2008-03-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
